# anova_wifi

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md  installation.md  usage.md
docs/design/: command_sending.md
src/anova_wifi/: __init__.py  exceptions.py  parser.py  precission_cooker.py  web_socket_containers.py  websocket_handler.py
src/anova_wifi/mocks/: anova_api.py
tests/: __init__.py  example_data.py  test_commands.py  test_containers.py  test_parser.py  test_websocket_handler.py
